# pygameBobby

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
assets/graphics/tiles/: main_tile.tsx
assets/maps/: map1.csv  map1.tmx  map2.tmx  map3.tmx  map4.tmx  map7.tmx
game/: __main__.py  install.spec
game/assets/maps/: map1.tmx  map2.tmx  map3.tmx  map4.tmx  map5.tmx  map6.tmx  map7.tmx  menu.tmx
game/misc/: __init__.py  animation.py  config.py  font.py  path.py  path_manager.py  singleton.py  sound_manager.py  spritesheet.py
game/objects/: __init__.py  carrot.py  player.py  tile.py  trap.py  trigger.py  water.py
game/scene/: __init__.py  camera.py  interface.py  map_loader.py  sound_manager.py  state_manager.py  ui.py
game/scene/states/: __init__.py  gameplay.py  level_transition.py  menu.py  pause.py  stage_utils.py  state.py  state_manager.py
game/scene/ui/: __init__.py  carrot_counter.py  timer.py
src/: __main__.py  config.py
src/assets/maps/: map5.tmx  map6.tmx  menu.tmx
src/misc/: __init__.py  animation.py  config.py  font_manager.py  path.py  path_manager.py  singleton.py  sound_manager.py  spritesheet.py
src/objects/: __init__.py  carrot.py  player.py  tile.py  trap.py  trigger.py  water.py
src/scene/: __init__.py  camera.py  interface.py  map_loader.py  state_manager.py  ui.py
src/scene/stages/: base.py  gameplay.py  menu.py  pause.py
src/scene/states/: __init__.py  gameplay.py  level_transition.py  menu.py  pause.py  state.py  (+2 more)
src/scenes/: camera.py  scene.py  tile.py  ui.py
(+10 files in other folders)
