[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ap73MKa", email = "artyom.vlasov.05@gmail.com"},
]
dependencies = [
    "pyinstaller>=5.13.0",
    "numpy>=1.25.2",
    "pygame>=2.4.0",
    "PyTMX>=3.31",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "ruff>=0.0.280",
    "isort>=5.12.0",
    "mypy>=1.4.1",
]

[tool.mypy]
ignore_missing_imports = true
pretty = false
check_untyped_defs = true
warn_redundant_casts = true

[tool.ruff]
select = ["E", "F", "B", "UP", "I", "PL", "ISC", "RUF"]
unfixable = ["B"]
ignore = ["E501", "RUF001", "B024", "PLR2004", "RUF009", "PLR0913"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
